<resources>
    <string name="app_name">VideoDemo</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--添加-->
    <string name="title_home">主页</string>
    <string name="title_concerned">关注</string>
    <string name="title_add">发布</string>
    <string name="title_message">消息</string>
    <string name="login_alert_message">登录即代表阅读并同意服务条款</string>
    <string name="title_loginPage">你还未登录账号，快登录吧</string>
    <string name="ed_nameTips">输入账号</string>
    <string name="ed_tipsContext">输入密码</string>
    <string name="tv_tips_login">新用户注册</string>
    <string name="tv_tips_findPassword">忘记密码？</string>
    <string name="title_register">注册</string>
    <string name="tips_account">账号</string>
    <string name="tips_No1psw">请输入密码</string>
    <string name="tips_No2psw">请再次输入密码</string>
</resources>
