<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/star"
    tools:context=".loginAndEnroll.EnrollActivity"
    tools:layout_editor_absoluteY="25dp">


    <LinearLayout
        android:id="@+id/title_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="注册"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_linearLayout">

        <EditText
            android:id="@+id/et_register_user_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:hint="@string/tips_account"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:theme="@style/MyEditText" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/tips_No1psw"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:theme="@style/MyEditText"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

        <EditText
            android:id="@+id/et_psw_again"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/tips_No2psw"
            android:inputType="textPassword"
            android:maxLength="15"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textSize="18sp"
            android:theme="@style/MyEditText"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/ba_color"
            android:text="注册"
            android:textSize="24sp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>